# defi-detective

./: .gitignore  Cargo.toml  README.md  configuration.yaml  contract_embeddings.json  evecs.json  model.h5  name.json  pca.json
addr_embeddings/: 00A0a01fef5A3210ea387BA725F0F9cA91BfE4DD  00A1f637E59a35E516dC178d65A9fB98eB45c4aC
contracts/: olympusdao.sol
contracts_no_comments/: olympusdao.sol  uniswap.sol
contracts_rearranged/: compound.sol  pancakeswap.sol  unifarm.sol  uniswap.sol
data/: pca.json  pcacat.json
fetching-backend/: .env_template  .gitignore  Cargo.toml  README.md  configuration.yaml  fetch_deployer.py  package.json  pnpm-lock.yaml
fetching-backend/db/: cache_of_ws_msgs.json
fetching-backend/examples/: json_parse.rs
fetching-backend/inputs/: events.json  protocol_events_fns.json  selectors.json
fetching-backend/outputs/: address_bytecode_matches.json  new_contract_matches.json
fetching-backend/src/: configuration.rs  lib.rs  main.rs
fetching-backend/src/bytecode_analyzer/: bytecode_runner.rs  deployer_analyzer.rs  mod.rs  upgradeable_analyzer.rs
fetching-backend/src/endpoint_handler/: mod.rs
fetching-backend/src/node_watcher/: fetcher.rs  mod.rs
frontend/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
frontend-astro/: package-lock.json  pnpm-lock.yaml
ml-backend/: .env.example  .gitignore  embed_contracts.py  predict.py  rearange.py  remove-comments.py  remove_comments.py  server.py  settings.py  utils.py  visualise_embeddings.py
scraping/: .gitignore  addCategory.mjs  cleanData.mjs  getAddress.mjs  index.mjs  (+4 more)
(+2289 files in other folders)
