[package]
name = "defi-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
dotenv = "0.15.0"
ethers = {version = "1.0.2", features = ["ws", "rustls"]}
eyre = "0.6.8"
once_cell = "1.17.1"
regex = "1.7.1"
serde = "1.0.152"
tokio = {version = "1.25.0", features = ["full", "time"]}
walkdir = "2.3.2"
tracing-subscriber = {version = "0.3.16"}
tracing = "0.1.29"
nanoid = "0.4.0"
futures = "0.3.17"
serde_json = "1.0.93"
hex = "0.4.3"
tokio-tungstenite = "*"
warp = "0.3.3"
